[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/DialogueUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.129412, 0.129412, 0.901961 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DialogueUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DialogueBox" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.7
anchor_right = 0.9
anchor_bottom = 0.95
custom_styles/panel = SubResource( 1 )

[node name="NPCName" type="Label" parent="DialogueBox"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.3
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "NPC Name"

[node name="DialogueText" type="Label" parent="DialogueBox"]
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.95
anchor_bottom = 0.6
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Dialogue text goes here..."
autowrap = true

[node name="OptionsContainer" type="VBoxContainer" parent="DialogueBox"]
anchor_left = 0.05
anchor_top = 0.65
anchor_right = 0.95
anchor_bottom = 0.95
custom_constants/separation = 5
]